# Ftune-Ptune

./: README.md  README_zh.md
Ptune4/: .gitignore  CMakeLists.txt  LICENSE.md  config.h.in
Ptune4/include/: bench.h  bsc.h  config.h  config.h.in  dhrystone.h  mem_test.h  memcheck.h  menu.h  settings.h  util.h  validate.h  whetstone.h
Ptune4/src/: bench.c  bsc.c  dhrystone.c  main.c  mem_read.s  mem_test.c  mem_write.s  settings.c  util.c  validate.c  whetstone.c
Ptune4/src/benchmark/: dhrystone.c
Ptune4/src/memtest/: rom_test.c  sdram_test.c  sram_test.c  test_address.c
Ptune4/src/menu/: benchmark.c  bsc.c  express.c  mem_data.c  settings.c
